--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-filenames": "^1.3.2",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "jest-sonar-reporter": "^2.0.0",
