--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.3.2",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.3.2",
     "@nestjs/platform-express": "^10.3.2",
     "@nestjs/terminus": "^10.2.0",
+    "@nestjs/typeorm": "^10.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "raw-body": "^2.5.2",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "sqlite3": "^5.1.7",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.3.2",
